# avrkey

./: .main.rs  .main1.rs  .main2.rs  .main3.rs  Cargo.toml  Makefile  README.md  notes.norg
.cargo/: Embed.toml
.gdb/: debug.gdb
src/: key.rs  key_codes.rs  key_mapping.rs  keyscanning.rs  main.rs
src/mods/: mod.rs  mod_tap.rs
