[package]
name = "avrkey"
version = "0.1.0"
authors = ["Zion Koyl <hiszd1@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "avrkey"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = {version = "0.2.3", features = ["unproven"]}
ws2812-timer-delay = {version="0.3", features=["slow"]}
smart-leds = "0.3" 
smart-leds-trait = "0.2"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "7dfa6d322b9df98b2d98afe0e14a97afe0187ac1"
features = ["arduino-leonardo"]

#![feature(abi_avr_interrupt)]
[dependencies.avr-device]
version = "0.5.1"
features = [
  "atmega32u4",
  # this is needed for 
  # the entry function
  "rt"
]

[dependencies.either]
version = "1.6.1"
default-features = false

[dependencies.void]
version = "*"
default-features = false

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = "fat"
strip = true
opt-level = "s"
